[package]
name = "benchgecko"
version = "0.1.0"
edition = "2021"
authors = ["BenchGecko <hello@benchgecko.ai>"]
description = "Official Rust SDK for the BenchGecko API. Compare AI models, benchmarks, and pricing."
license = "MIT"
readme = "README.md"
homepage = "https://benchgecko.ai"
repository = "https://github.com/BenchGecko/benchgecko-rust"
documentation = "https://docs.rs/benchgecko"
keywords = ["ai", "benchmarks", "llm", "models", "pricing"]
categories = ["web-programming::http-client", "data-structures"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
